--- a/css/style.css
+++ b/css/style.css
@@ -2345,11 +2345,29 @@ main {
     display: block;
     top: -45px;
   }
+
+  .content__column--channels {
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 639px) {
   .gallery__item--clients {
     margin-right: 30px;
+  }
+
+  .content__picture--match-tv {
+    margin-right: 0;
+  }
+
+  .content__text--infographics {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .content__text--infographics {
+    font-size: 16px;
   }
 }
 
@@ -2365,10 +2383,6 @@ main {
 
   .content__text--channels {
     font-size: 16px;
-  }
-
-  .content__column--channels {
-    text-align: center;
   }
 
   .content__picture--match-tv {
