--- a/css/style.css
+++ b/css/style.css
@@ -463,22 +463,37 @@ a {
 }
 
 .page-title__category {
-  transform-origin: left center;
-  animation-timing-function: linear;
-  animation-duration: 0.6s;
+  -webkit-transform-origin: left center;
+          transform-origin: left center;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-duration: 0.6s;
+          animation-duration: 0.6s;
 }
 
 .page-title__category--disappear {
-  animation-name: pageTitleDisappear;
+  -webkit-animation-name: pageTitleDisappear;
+          animation-name: pageTitleDisappear;
 }
 
 .page-title__category--appear {
-  animation-name: pageTitleAppear;
+  -webkit-animation-name: pageTitleAppear;
+          animation-name: pageTitleAppear;
+}
+
+@-webkit-keyframes pageTitleDisappear {
+  0% {opacity: 1;}
+  100% {opacity: 0;}
 }
 
 @keyframes pageTitleDisappear {
   0% {opacity: 1;}
   100% {opacity: 0;}
+}
+
+@-webkit-keyframes pageTitleAppear {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
 }
 
 @keyframes pageTitleAppear {
@@ -1038,11 +1053,19 @@ main {
 
   background-color: #1e2535;
 
-  animation-duration: 0s;
+  -webkit-animation-duration: 0s;
+
+          animation-duration: 0s;
 }
 
 .gallery__item--appear {
-  animation-name: popupAppear;
+  -webkit-animation-name: popupAppear;
+          animation-name: popupAppear;
+}
+
+@-webkit-keyframes popupAppear {
+  0% {opacity: 0};
+  100% {opacity: 0.98};
 }
 
 @keyframes popupAppear {
@@ -1233,7 +1256,9 @@ main {
 
   vertical-align: top;
 
-  transform: skew(-24deg);
+  -webkit-transform: skew(-24deg);
+
+          transform: skew(-24deg);
   background-color: #f48a31;
 }
 
@@ -1245,7 +1270,8 @@ main {
   position: static;
   display: block;
   color: #1a2232;
-  transform: skew(24deg);
+  -webkit-transform: skew(24deg);
+          transform: skew(24deg);
 }
 
 .cross--done {
@@ -1691,26 +1717,42 @@ main {
 
   background-color: #2a3140;
 
-  animation-duration: 0.6s;
+  -webkit-animation-duration: 0.6s;
+
+          animation-duration: 0.6s;
 }
 
 .js__wrapper--show {
   opacity: 1;
   display: block;
 
-  animation-name: contactsFormAppear;
+  -webkit-animation-name: contactsFormAppear;
+
+          animation-name: contactsFormAppear;
 }
 
 .js__wrapper--hide {
   opacity: 0;
   display: block;
 
-  animation-name: contactsFormDisappear;
+  -webkit-animation-name: contactsFormDisappear;
+
+          animation-name: contactsFormDisappear;
+}
+
+@-webkit-keyframes contactsFormAppear {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
 }
 
 @keyframes contactsFormAppear {
   0% {opacity: 0;}
   100% {opacity: 1;}
+}
+
+@-webkit-keyframes contactsFormDisappear {
+  0% {opacity: 1;}
+  100% {opacity: 0;}
 }
 
 @keyframes contactsFormDisappear {
@@ -1855,6 +1897,8 @@ main {
     width: 50px;
     margin: 0;
     padding: 6px 0;
+
+    background-image: -webkit-linear-gradient(top, transparent 6px, #f9f9f9 6px, #f9f9f9 8px, transparent 8px, transparent 24px, #f9f9f9 24px, #f9f9f9 26px, transparent 26px, transparent 42px, #f9f9f9 42px, #f9f9f9 44px, transparent 44px, transparent);
 
     background-image: linear-gradient(to bottom, transparent 6px, #f9f9f9 6px, #f9f9f9 8px, transparent 8px, transparent 24px, #f9f9f9 24px, #f9f9f9 26px, transparent 26px, transparent 42px, #f9f9f9 42px, #f9f9f9 44px, transparent 44px, transparent);
 
@@ -2032,14 +2076,21 @@ main {
   .gallery__item--popup {
     position: fixed;
     top: 50%;
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
     bottom: auto;
     opacity: 0.98;
 
     padding-bottom: 40px;
     max-height: 100%;
 
-    animation-duration: 0.6s;
+    -webkit-animation-duration: 0.6s;
+
+            animation-duration: 0.6s;
+  }
+
+  .gallery__link--popup {
+    padding-top: 20px;
   }
 
   .gallery__picture--popup img {
@@ -2265,7 +2316,9 @@ main {
     width: 100%;
     padding: 0 4.166%;
 
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+
+            transform: translate(-50%, -50%);
   }
 
   .contacts__text.contacts__text--form-title {
